--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@iconify/iconify": "^2.0.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
+    "@iconify/json": "^1.1.407",
     "@vitejs/plugin-vue": "^1.9.0",
-    "vite": "^2.5.10"
+    "vite": "^2.5.10",
+    "vite-plugin-fonts": "^0.2.2",
+    "vite-plugin-purge-icons": "^0.7.0",
+    "vite-plugin-windicss": "^1.4.7",
+    "windicss": "^3.1.8"
   }
 }
